- Fix for handling unnamed parameter in MySQLCommand. This fix allows the mysqlcommand to handle parameters without requiring naming (e.g. INSERT INTO Test (id,name) VALUES (?, ?) ) (MySQL Bug #66060, Oracle bug #14499549).

6.6.2
- Parser: Fix for Problems when declaring variables in certain places (wasn't accepting declare var after declare handler in a begin/end block).
- Parser: Fix for Problems with CHARSET (previously only CHARACTER SET was recognized).
- Parser: Fix for Parser was not returning table_ref for "replace" parsed statements.
- Debugger: Fix for "Data is Null" error when debugging a Procedure that reference a trigger that is in a different db than current one
- Debugger: Added better support for datetime columns, including zeroed columns, Appended "Allow Zero DateTime=true" to the debugger connection string dynamically/
- Debugger: Fix error when debugging a routine which name was a MySql keyword.
- Debugger: Fix colorizing the whole line when stepping into a line with several statements defined (only the current statement is colorized now, not the whole line).
- Debugger: Enabled colorizing (Intellisense) into debugger editor.
- Debugger: Enabled changing values of locals in a function scope (previously caused deadlock since functions are executed in a transaction in MySql).
- Debugger: Fix a small issue such that when in a multiple stack frame debug session, clicking in a stack frame other than the current one, was not colorizing correctly.
- Debugger: Added support for conditional breakpoints
- Debugger: Added support for pass count breakpoints
- Debugger: Fixed a bug such that in a multiple callstack scenario, cliking in a stack frame other than the last one, was not updating locals grid.
- Debugger: Fixed a bug such that when modifying a local variable in a nested scope debug session, the value appear temporarily as "Not implemented interface".
- Added support for Visual Studio 2012
- Added Authentication Plugin.

6.6.1